Minor CSS tweaks

--- a/src/apps/dashboard-projects/ProjectsHome.css
+++ b/src/apps/dashboard-projects/ProjectsHome.css
@@ -33,7 +33,7 @@
 }
 
 .dashboard-projects-home main {
-  padding: 30px 40px;
+  padding: 30px;
 }
 
 .dashboard-projects-home .dashboard-projects-grid  {
