--- a/src/components/DashboardHeader/DashboardHeader.css
+++ b/src/components/DashboardHeader/DashboardHeader.css
@@ -1,11 +1,10 @@
 header.dashboard-header {
   align-items: center;
-  border-bottom: 1px solid var(--gray-300);
   box-sizing: border-box;
   display: flex;
   height: 50px;
   justify-content: space-between;
-  padding: 0 40px;
+  padding: 30px;
 }
 
 header.dashboard-header .dashboard-header-actions {
