--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,7 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
 ---
 <!DOCTYPE html>
 <html lang={getLangFromUrl(Astro.url)}>
@@ -18,18 +19,19 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="view-transition" content="same-origin" />
-		<script
-		async
-		src='https://widget.usersnap.com/load/%USERSNAP_API_KEY%?onload=onUsersnapCXLoad'
-	  ></script>
-	  <script>
-		window.onUsersnapCXLoad = function(api) {
-		  api.init();
-		}
-	  </script>
 		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
+		<script>
+			window.onUsersnapLoad = function(api) {
+			  api.init();
+			  api.show(import.meta.env.PUBLIC_USERSNAP_PROJECT_API_KEY);
+			}
+			var script = document.createElement('script');
+			script.defer = 1;
+			script.src = `https://widget.usersnap.com/global/load/${import.meta.env.PUBLIC_USERSNAP_GLOBAL_API_KEY}?onload=onUsersnapLoad`;
+			document.getElementsByTagName('head')[0].appendChild(script);
+		  </script>
 	</body>
 </html>
