--- a/src/apps/dashboard-projects/ProjectsHome.css
+++ b/src/apps/dashboard-projects/ProjectsHome.css
@@ -1,3 +1,13 @@
+.dashboard-projects-home {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.dashboard-projects-home main {
+  flex-grow: 1;
+}
+
 .dashboard-projects-empty {
   align-items: center;
   display: flex;
@@ -8,23 +18,18 @@
 }
 
 .dashboard-projects-empty h1 {
-  font-size: 1.4em;
-  font-weight: 600;
-  margin: 0;
-  padding: 1em 0 0 0;
-}
-
-.dashboard-projects-empty p {
-  color: var(--gray-600); 
+  font-family: Inter;
   font-size: var(--font-small);
-  max-width: 70ch;
-  padding: 0em 0 2em 0;
+  font-weight: 500;
+  margin: 0;
+  padding: 0 0 1.2em 0;
 }
 
 .dashboard-projects-empty .dashboard-projects-empty-cta {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
+  padding-bottom: 2em;
 }
 
 .dashboard-projects-empty .dashboard-projects-empty-cta button {
