--- a/src/components/Annotation/Comment/Comment.css
+++ b/src/components/Annotation/Comment/Comment.css
@@ -2,6 +2,7 @@
   border-top: 1px solid var(--border-color);
   padding: 15px 10px;
   transition: background-color 1500ms;
+  white-space: pre-wrap;
 }
 
 li:first-child > .annotation-comment {
