--- a/src/apps/project-collaboration/ManageUsers.css
+++ b/src/apps/project-collaboration/ManageUsers.css
@@ -32,7 +32,7 @@
 .users-table {
     display: flex;
     flex-direction: column;
-    max-width: 800px;
+    max-width: 1000px;
     margin-top: 20px;
 }
 
@@ -55,7 +55,7 @@
     padding: 10px 15px;
 }
 
-.users-table .row:hover :not(.header, .header > div) {
+.users-table .row:hover :not(.header, .header > div, button) {
     background-color: var(--gray-100);
 }
 
@@ -77,14 +77,14 @@
     box-shadow: 0 0 0 1px var(--dark-blue);
   }
 
-  .InviteDialogOverlay {
+  .CollabDialogOverlay {
     background-color: rgba(0,0,0,0.25);
     position: fixed;
     inset: 0;
     animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   }
   
-  .InviteDialogContent {
+  .CollabDialogContent {
     background-color: white;
     border-radius: 6px;
     box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
@@ -98,11 +98,11 @@
     padding: 25px;
     animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   }
-  .InviteDialogContent:focus {
+  .CollabDialogContent:focus {
     outline: none;
   }
 
-  .InviteDialogClose {
+  .CollabDialogClose {
     font-family: inherit;
     border-radius: 100%;
     height: 25px;
