--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -104,14 +104,15 @@
   /** Colors **/
   --dark-blue: #07498a;
   --bright-blue: #07529a;
-  --brighter-blue: #0167ff;
+  --brighter-blue: #0969c3;
   --sand: #987116;
   --mud-gray: #808073;
   --orange: #e9b44a;
   
   --gray-900: #202125;
-  --gray-600: #6f747c; 
-  --gray-500: #818992;
+  --gray-700: #6f747c; 
+  --gray-600: #818992;
+  --gray-500: #93989f; 
   --gray-400: #cbd0d7;
   --gray-300: #dadee2;
   --gray-200: #dfe2e7;
@@ -128,7 +129,7 @@
 
   /** Font styles **/
   --font-dark: var(--gray-900);
-  --font-light: var(--gray-600);
+  --font-light: var(--gray-700);
   --font-semi: rgba(255, 255, 255, 0.65);
 
   --font-small: 0.875em;
@@ -157,7 +158,7 @@
 }
 
 html, body {
-  background-color: var(--gray-100);
+  background-color: var(--gray-50);
   color: var(--gray-900);
   font-family: Inter, Arial, Helvetica, sans-serif;
   font-size: 16px;
