--- a/src/components/Notifications/EmptyList/EmptyList.css
+++ b/src/components/Notifications/EmptyList/EmptyList.css
@@ -2,8 +2,9 @@
   background-color: var(--gray-50);
   border-radius: 0 0 var(--border-radius) var(--border-radius);
   border-top: 1px solid var(--gray-200);
+  line-height: 130%;
   text-align: center;
-  padding: 15px;
+  padding: 20px 15px;
 }
 
 .notifications-empty p {
