--- a/src/apps/dashboard-projects/Header/Header.css
+++ b/src/apps/dashboard-projects/Header/Header.css
@@ -80,10 +80,14 @@
   padding: 8px 4px;
 }
 
+.dashboard-header-bottom li:hover button {
+  border-color: var(--gray-500);
+}
+
 .dashboard-header-bottom li.active button {
   border-color: var(--brighter-blue);
   color: var(--brighter-blue);
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .dashboard-header-bottom li button:hover {
