--- a/src/themes/default/dropdown/index.css
+++ b/src/themes/default/dropdown/index.css
@@ -9,6 +9,7 @@
     0 8px 24px -4px rgba(0, 0, 0, 0.08);
   line-height: 160%;
   min-width: 160px;
+  padding: 5px 0;
 }
 
 .dropdown-content[data-side='top'], .dropdown-subcontent[data-side='top'] {
