--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -5,6 +5,8 @@ import { getLangFromUrl, getTranslations } from '@i18n';
 import { listMyInvites, listMyProjects } from '@backend/crud';
 import { ProjectsHome } from '@apps/dashboard-projects';
 import { getUser } from '@backend/auth';
+import { listMyProjectsExtended } from '@backend/helpers';
+import type { ExtendedProjectData } from 'src/Types';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -14,21 +16,25 @@ if (!supabase)
 
 const me = await getUser(supabase);
 
+// const projects = await listMyProjectsExtended(supabase);
 const projects = await listMyProjects(supabase);
 
 const invitations = await listMyInvites(supabase);
+
+if (!projects.data || !invitations.data) {
+  const path = Astro.url.protocol + '//' + Astro.url.host;
+  const error = await fetch(`${path}/500`);
+  return new Response(error.body, { headers: error.headers, status: 500 }); 
+}
 ---
 <BaseLayout title="Dashboard">
   <div class="container">
-    {(projects.error || invitations.error) ? (
-      <div>Something went wrong</div>
-    ) : (
-      <ProjectsHome 
-        client:load
-        me={me}
-        projects={projects.data} 
-        invitations={invitations.data}
-        i18n={getTranslations(Astro.request, 'dashboard-projects')} />
-    )}
+    <ProjectsHome 
+      client:load
+      me={me}
+      projects={projects.data} 
+      invitations={invitations.data}
+      i18n={getTranslations(Astro.request, 'dashboard-projects')} />
+
   </div>
 </BaseLayout>
