Refactoring of project member table + introduced Radix dropdown for roles

--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -77,10 +77,11 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
 
   main {
     box-sizing: border-box;
+    display: flex;
     flex-grow: 1;
     margin: 0 auto;
     max-width: 80rem;
-    padding: 40px;
+    padding: 0;
     position: relative;
     width: 100%;
   }
