--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -7,6 +7,7 @@
 @import './form/index.css';
 @import './mixins/index.css';
 @import './popover/index.css';
+@import './select/index.css';
 @import './toast/index.css';
 
 @font-face {
@@ -125,7 +126,7 @@
   --green-500: #11a011;
 
   /** Global constants **/
-  --border-radius: 3px;
+  --border-radius: 3px; 
   --link-color: var(--bright-blue);
 
   /** Font styles **/
