--- a/src/apps/project-collaboration/MembersTable/MembersTable.css
+++ b/src/apps/project-collaboration/MembersTable/MembersTable.css
@@ -19,15 +19,19 @@
   border-color: var(--gray-200);
   border-style: solid;
   border-width: 1px 0 0 0;
+  box-sizing: border-box;
   color: var(--font-light);
   font-weight: 400;
-  padding: 0.6em 0.3em;
+  height: 40px;
+  padding: 0.2em 0.3em;
   text-align: left;
 }
 
 .project-members-table .actions {
+  align-items: center;
   display: flex;
   justify-content: flex-end;
+  padding-right: 0.5em;
 }
 
 .project-members-table tbody td {
@@ -35,6 +39,7 @@
   border-style: solid;
   border-width: 1px 0 0 0;
   color: var(--font-dark);
+  height: 40px;
 }
 
 .project-members-table thead th:first-child {
@@ -75,13 +80,4 @@
   outline: none;
   background-color: var(--violet-9);
   color: var(--violet-1);
-}
-
-.SelectItemIndicator {
-  position: absolute;
-  left: 0;
-  width: 25px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
 }
