More CSS tweaks

--- a/src/apps/project-collaboration/ManageUsers.css
+++ b/src/apps/project-collaboration/ManageUsers.css
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
+.manage-users button.invite-user svg {
+  padding-right: 0.5em;
+}
+
 /*
 .CheckboxRoot {
   background-color: white;
