--- a/src/apps/project-collaboration/MembersTable/MembersTable.css
+++ b/src/apps/project-collaboration/MembersTable/MembersTable.css
@@ -60,9 +60,11 @@
 .project-members-table tbody td:last-child {
   border-width: 1px 1px 0 0;
 }
+
 .project-members-table tbody td:nth-child(2) {
   width: 50%;
 }
+
 .project-members-table tbody tr:last-child td {
   border-bottom: 1px solid var(--gray-200);
 }
@@ -75,12 +77,8 @@
   border-radius: 0 0 var(--border-radius) 0;
 }
 
-.SelectItem[data-disabled] {
-  color: var(--mauve-8);
-  pointer-events: none;
-}
-.SelectItem[data-highlighted] {
-  outline: none;
-  background-color: var(--violet-9);
-  color: var(--violet-1);
+.project-members-table td .invitation-sent {
+  color: var(--font-light);
+  display: inline-block;
+  padding: 0 0.9em;
 }
