--- a/src/pages/[lang]/projects/[slug]/collaboration.astro
+++ b/src/pages/[lang]/projects/[slug]/collaboration.astro
@@ -24,9 +24,8 @@ const project = await getProjectExtended(supabase, projectId as string);
 const invitations = await listPendingInvitations(supabase, projectId as string);
 
 if (project.error || invitations.error || !user) { 
-  const path = Astro.url.protocol + '//' + Astro.url.host;
-  const error = await fetch(`${path}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
+  const error = await fetch(`${Astro.url}/404`);
+  return new Response(error.body, { headers: error.headers, status: 404 }); 
 }
 ---
 <ProjectLayout active="collaboration" user={user} project={project.data}>
