--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -1,3 +1,4 @@
+@import './danger.css';
 @import './primary.css';
 @import './success.css';
 @import './unstyled.css';
@@ -50,9 +51,7 @@ button:disabled svg {
 button:hover:not(:disabled), a.button:hover {
   box-shadow: 
     inset 0 0 0 150px rgba(0, 0, 0, 0.06);
-    /* 0 2px 3px -2px rgba(0, 0, 0, 0.2); */
 }
-
 
 button:focus-visible {
   box-shadow: 0 0 0 3px var(--button-focus-outline-color);
@@ -60,7 +59,7 @@ button:focus-visible {
 
 button > svg {
   color: var(--font-light);
-  margin: 0 0.4em 0.1em 0.4em;
+  margin: 0 0.5em 0.1em 0.5em;
 }
 
 button svg:first-child {
@@ -72,7 +71,7 @@ button svg:last-child {
 }
 
 :is(button, a.button) + :is(button, a.button) {
-  margin-left: 0.5em;
+  margin-left: 0.8em;
 }
 
 button.tiny,
