--- a/src/themes/default/dialog/index.css
+++ b/src/themes/default/dialog/index.css
@@ -36,9 +36,21 @@
 }
 
 .dialog-title {
+  font-size: 1.2em;
   margin: 0;
 }
 
 .dialog-description {
-  font-size: var(--font-small);
+  font-size: var(--font-tiny);
+  margin: 1.5em 0;
+}
+
+.dialog-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.dialog-footer {
+  display: flex;
 }
