--- a/src/themes/default/form/index.css
+++ b/src/themes/default/form/index.css
@@ -1,2 +1,26 @@
-@import './fieldset.css';
 @import './input.css';
+
+fieldset {
+  border: none;
+  margin: 1.5em 0 2.5em 0;
+  padding: 0;
+}
+
+form .field {
+  margin: 1em 0;
+}
+
+form .field label {
+  display: inline-block;
+  width: 100px;
+}
+
+form .field input {
+  width: 320px;
+}
+
+form select {
+  display: inline-block;
+  width: 320px;
+  padding: 10px;
+}
