--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,36 +1,37 @@
 .project-card {
   background-color: #fff;
   border-radius: var(--border-radius);
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.07);
   cursor: pointer;
   position: relative;
   transition: all .25s ease-in-out;
 }
 
-.project-card > div {
-  padding: 20px 20px 40px 20px;
-}
-
 .project-card:hover {
   box-shadow:
-    0 0 0 1px rgba(0, 0, 0, 0.18),
+    0 0 0 1px rgba(0, 0, 0, 0.1),
     0 2px 8px -2px rgba(0, 0, 0, 0.28);
 }
 
-.project-card h1 {
+.project-card-body {
+  padding: 15px 20px 5px 20px;
+}
+
+.project-card-body h1 {
   font-size: 1em;
   font-weight: 500;
   margin: 0;
   padding: 0;  
 }
 
-.project-card h1 a,
-.project-card h1 a:hover {
+.project-card-body h1 a,
+.project-card-body h1 a:hover {
   color: var(--font-dark);
   text-decoration: none;
 }
 
-.project-card p {
+.project-card-body p {
+  color: var(--font-light);
   display: block;
   display: -webkit-box;
   font-size: var(--font-tiny);
@@ -44,8 +45,42 @@
   -webkit-line-clamp: 2;
 }
 
-.project-card .project-card-actions {
-  bottom: 9px;
-  right: 9px;
-  position: absolute;
+.project-card-body ul.document-stats {
+  color: var(--font-light);
+  font-size: 11.5px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: right;
+}
+
+.project-card-body ul.document-stats li {
+  display: inline-block;
+
+}
+
+.project-card-body ul.document-stats li + li {
+  padding-left: 10px;
+} 
+
+.project-card-body ul.document-stats li svg {
+  padding: 0 3px 2px 0;
+  vertical-align: middle;
+}
+
+.project-card-footer {
+  align-items: center;
+  background-color: var(--gray-50);
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
+  border-top: 1px solid rgba(0, 0, 0, 0.04);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px 5px 5px 8px;
+}
+
+.project-card-footer .avatar-stack .avatar {
+  border: 2px solid var(--gray-50); 
+  height: 26px;
+  width: 26px;
 }
