Text annotation formatting tweak

--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -103,5 +103,6 @@ if (document.data.content_type === 'text/plain') {
     padding: 70px 85px 90px 85px;
     white-space: pre-line;
     width: 60ch;
+    word-wrap: break-word;
   }
 </style>
