Starting a rudimentary color style panel

--- a/src/components/AnnotationDesktop/ViewMenu/ViewMenu.css
+++ b/src/components/AnnotationDesktop/ViewMenu/ViewMenu.css
@@ -60,5 +60,11 @@
   flex-grow: 1;
   overflow-y: auto;
   pointer-events: all;
+  position: relative;
+}
+
+.anno-sidebar-container aside > div {
+  position: absolute;
+  top: 0;
 }
 
