Added minimal button style + 'Add description' button

--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -6,6 +6,10 @@
   position: relative;
 }
 
+.project-description {
+  padding: 0 0 1.5em 0;
+}
+
 .project-home-grid-wrapper {
   flex-grow: 1;
   position: relative;
