--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -6,8 +6,8 @@
   position: relative;
 }
 
-.project-description {
-  padding: 0 0 1.5em 0;
+.project-home h1 {
+  margin-bottom: 0.5em;
 }
 
 .project-home-grid-wrapper {
@@ -20,7 +20,7 @@
   gap: 1rem;
   grid-auto-rows: 1fr;  
   grid-template-columns: repeat(auto-fill, 180px);
-  padding: 70px 0 40px 0;
+  padding: 2em 0 40px 0;
 }
 
 .dropzone-hint-wrapper {
