--- a/src/themes/default/button/unstyled.css
+++ b/src/themes/default/button/unstyled.css
@@ -5,10 +5,14 @@ button.unstyled {
   box-shadow: none;
   color: var(--font-light);
   cursor: pointer;
-  display: inline;
   font-size: var(--font-small);
   margin: 0;
   padding: 0;
+}
+
+button.unstyled svg {
+  position: relative;
+  top: -1px;
 }
 
 button.unstyled:disabled {
