--- a/src/themes/default/dialog/index.css
+++ b/src/themes/default/dialog/index.css
@@ -22,6 +22,10 @@
   padding: 25px;
 }
 
+.dialog-content form .field {
+  font-size: var(--font-tiny);
+}
+
 @keyframes dialogEnter {
   from {
     opacity: 0;
