--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -1,5 +1,6 @@
 @import './annotation/index.css';
 @import './avatar/index.css';
+@import './badge/index.css';
 @import './breadcrumbs/index.css';
 @import './button/index.css';
 @import './checkbox/index.css';
