Tweaks to 'Delete Member' dialog + alternative wording when attempting to delete yourself

--- a/src/themes/default/dialog/index.css
+++ b/src/themes/default/dialog/index.css
@@ -45,7 +45,8 @@
 }
 
 .dialog-description {
-  margin: 1.5em 0;
+  line-height: 160%;
+  margin: 2.5em 0;
   font-size: var(--font-tiny);
 }
 
@@ -57,4 +58,5 @@
 
 .dialog-footer {
   display: flex;
+  margin-top: 2.5em;
 }
