--- a/src/pages/[lang]/projects/[slug]/addons.astro
+++ b/src/pages/[lang]/projects/[slug]/addons.astro
@@ -1,8 +1,7 @@
 ---
 import ProjectLayout from '@layouts/project/ProjectLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
-import { getUserProfile } from '@backend/auth';
-import { getProject } from '@backend/crud';
+import { getProject, getMyProfile } from '@backend/crud';
 import { getLangFromUrl } from '@i18n';
 
 const lang = getLangFromUrl(Astro.url);
@@ -11,13 +10,18 @@ const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase)
   return Astro.redirect(`/${lang}/sign-in`);
 
-const user = await getUserProfile(supabase);
-
 const projectId = Astro.params.slug;
+
+const { error, data } = await getMyProfile(supabase);
+
+if (error) { 
+  const error = await fetch(`${Astro.url}/500`);
+  return new Response(error.body, { headers: error.headers, status: 500 }); 
+}
 
 const response = await getProject(supabase, projectId as string);
 ---
-<ProjectLayout active="addons" user={user} project={response.data}>
+<ProjectLayout active="addons" user={data} project={response.data}>
   {response.error ? (
     <div>Something went wrong</div>
   ) : (
