--- a/src/apps/project-collaboration/ProjectCollaboration.css
+++ b/src/apps/project-collaboration/ProjectCollaboration.css
@@ -10,5 +10,6 @@
 .invite-users.dialog-content .error {
   color: var(--red-500);
   font-size: var(--font-tiny);
+  line-height: 170%;
   padding: 10px 0;
 }
