--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -105,7 +105,7 @@ button.no-hover:hover {
 button.icon-only {
   align-items: center;
   border-radius: 50%;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
 }
 
